fix gallery view on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@ body {
 
 	--font-primary: var(--font-pp-neue-corp);
 
-	--text-display-large: 81px;
+	--text-display-large: 91px;
 	--text-display-medium: 54px;
 	--text-display-small: 36px;
 	--text-headline-large: 57px;
